--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.vinilosapp">
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VinilosApp.NoActionBar"
-        >
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
         <activity
             android:name="com.example.vinilosapp.ui.MainActivity"
             android:exported="true"
